# ds-packages

calculator/: pyproject.toml
calculator/calculator/: calc.py  main.py
calculator/calculator/v1/: calculator_api_pb2_grpc.py  calculator_pb2.py
calculator/src/: main.py
calculator/src/calculator/: calculator.py
calculator/src/calculator/v1/: calculator_api_pb2.py  calculator_api_pb2_grpc.py
utils/: pyproject.toml  requirements.txt
utils/src/http/: http_client.py
utils/src/http_client/: http_client.py
utils/tests/test_http/: test_http_client.py
utils/tests/test_http_client/: conftest.py  test_http_client.py
