[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator"
version = "0.2.0"
authors = [
  { name="Dong Wang", email=" dong@toggle.ai " },
]
description = "Calculator package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry]
name = "calculator"
version = "0.2.0"
description = "Calculator package"
authors = ["Dong Wang <dong@toggle.ai>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
coverage = "7.0.1"
pre-commit = "3.0.0"
pytest = "7.2.1"

[tool.poetry.dependencies]
grpcio = "1.48.2"
grpcio-tools = "1.48.2"
python = "^3.8"
protobuf = "3.20.3"
requests = "2.26.0"
utils = {git = "https://github.com/dong-toggle-ai/ds-packages", subdirectory = "utils"}
